--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,25 @@
-# MCP Server Configuration
-AUTH_TOKEN=your_secret_token_here
+# MCP Server Configuration Template
+# Copy this file to .env and fill in your actual values
+
+# Authentication token for MCP server access
+# Change this to a secure random string for production
+AUTH_TOKEN=your_secure_auth_token_here
+
+# Your phone number (with country code)
 MY_NUMBER=919876543210
 
-# Gemini API Configuration  
+# Gemini AI API Key
+# Get this from https://aistudio.google.com/app/apikey
 GEMINI_API_KEY=your_gemini_api_key_here
 
-# Optional: For local development
+# Development settings
+# Set to false in production
 DEBUG=true
+
+# Server configuration (optional)
+HOST=0.0.0.0
+PORT=8086
+
+# Optional: SSL Configuration for HTTPS (production only)
+# SSL_CERT_PATH=/path/to/cert.pem
+# SSL_KEY_PATH=/path/to/key.pem
