Fix Docker build: Remove .env dependency and use environment variables

--- a/.dockerignore
+++ b/.dockerignore
@@ -3,6 +3,11 @@
 .gitignore
 README.md
 
+# Environment files (use environment variables instead)
+.env
+.env.*
+!.env.example
+
 # Python
 __pycache__
 *.pyc
